--- a/Deji/MainWindow.xaml
+++ b/Deji/MainWindow.xaml
@@ -6,51 +6,54 @@
         xmlns:local="clr-namespace:Deji"
         mc:Ignorable="d"
         Title="MainWindow" Width="800" Height="450" Background="#FF857979">
+   
+        <Grid Margin="10,10,0,0" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" MinWidth="550">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="60" MaxHeight="60" MinHeight="60"/>
+                <RowDefinition Height="*" MinHeight="100"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="250" MaxWidth="250" MinWidth="250"/>
+                <ColumnDefinition Width="*" MinWidth="200"/>
+            </Grid.ColumnDefinitions>
 
-    <Grid HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="757" Height="409">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="7*"/>
-            <RowDefinition Height="41*"/>
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="1*"/>
-            <ColumnDefinition Width="3*"/>
-        </Grid.ColumnDefinitions>
-
-        <StackPanel Orientation="Vertical" Margin="10,0,0,0" Grid.Column="0">
-            <Label Content="Поиск" HorizontalAlignment="Left" VerticalAlignment="Top" Width="179" Height="26" FontWeight="Bold" FontSize="14" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Background="White"/>
-            <TextBox HorizontalAlignment="Left" Height="28" TextWrapping="Wrap" VerticalAlignment="Top" ToolTip="Введите часть ФИО" VerticalContentAlignment="Center" FontStyle="Italic" Width="179"/>
-        </StackPanel>
-        <StackPanel Grid.Column="1" Margin="10" Orientation="Horizontal">
-            <Button Content="Добавить&#xA;&quot;человека&quot;" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Height="36"/>
-            <Button Content="Добавить&#xA;запись" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" Width="75" RenderTransformOrigin="-0.04,-1" Height="36" HorizontalContentAlignment="Center"/>
-            <Button Content="Инфо о&#xA;программе" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" Width="75" RenderTransformOrigin="-1.253,1.2" Height="36"/>
-        </StackPanel>
+            <StackPanel Orientation="Vertical" Grid.Column="0" HorizontalAlignment="Left" Width="240" Height="60" VerticalAlignment="Top" ClipToBounds="True">
+                <Label Content="Поиск" HorizontalAlignment="Left" VerticalAlignment="Top" Width="240" Height="26" FontWeight="Bold" FontSize="14" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Background="White"/>
+                <TextBox HorizontalAlignment="Left" Height="28" TextWrapping="Wrap" VerticalAlignment="Top" ToolTip="Введите часть ФИО" VerticalContentAlignment="Center" FontStyle="Italic" Width="240"/>
+            </StackPanel>
+            <StackPanel Grid.Column="1" Margin="0,10,20,10" Orientation="Horizontal">
+                <Button Content="Добавить&#xA;&quot;человека&quot;" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Height="36"/>
+                <Button Content="Добавить&#xA;запись" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" Width="75" RenderTransformOrigin="-0.04,-1" Height="36" HorizontalContentAlignment="Center"/>
+                <Button Content="Инфо о&#xA;программе" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" Width="75" RenderTransformOrigin="-1.253,1.2" Height="36"/>
+            </StackPanel>
 
 
-        <DataGrid Name="GridUnits" Grid.Column="0" Grid.Row="1" HorizontalAlignment="Left" Height="339" Margin="10,10,0,0" VerticalAlignment="Top" Width="179"
+            <DataGrid Name="GridUnits" Grid.Column="0" Grid.Row="1" HorizontalAlignment="Left" Width="240"
+                  GridLinesVisibility="All" ClipToBounds="True" AutoGenerateColumns="False"  ScrollViewer.CanContentScroll="True"
+                  ScrollViewer.VerticalScrollBarVisibility="Visible"  ScrollViewer.HorizontalScrollBarVisibility="Visible" CanUserAddRows="False" VerticalContentAlignment="Stretch" 
+                  SelectionChanged="FocusRowUnits">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="Звание" Width="Auto" Binding="{Binding Path=ThatRank}"/>
+                    <DataGridTextColumn Header="ФИО" Width="Auto" Binding="{Binding Path=ThatName}"/>
+                    <DataGridTextColumn Header="Должность" Width="Auto" Binding="{Binding Path=ThatType}"/>
+                    <DataGridTextColumn Header="Часть" Width="Auto" Binding="{Binding Path=ThatPart}"/>
+                </DataGrid.Columns>
+
+            </DataGrid>
+
+        <DataGrid Name="GridRecords" Margin="0,0,10,0" Grid.Column="1" Grid.Row="1" 
+                  Height="Auto" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" MinWidth="200" 
                   GridLinesVisibility="All" ClipToBounds="True" AutoGenerateColumns="False"  ScrollViewer.CanContentScroll="True"
                   ScrollViewer.VerticalScrollBarVisibility="Visible"  ScrollViewer.HorizontalScrollBarVisibility="Visible" CanUserAddRows="False">
-            <DataGrid.Columns>
-                <DataGridTextColumn Header="Звание" Width="Auto" Binding="{Binding Path=thatRank}"/>
-                <DataGridTextColumn Header="ФИО" Width="Auto" Binding="{Binding Path=thatName}"/>
-                <DataGridTextColumn Header="Должность" Width="Auto" Binding="{Binding Path=thatType}"/>
-                <DataGridTextColumn Header="Часть" Width="Auto" Binding="{Binding Path=thatPart}"/>
-            </DataGrid.Columns>
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="Дата" Width="Auto" Binding="{Binding Path=ThatDate}"/>
+                    <DataGridTextColumn Header="Время" Width="Auto" Binding="{Binding Path=ThatTime}"/>
+                    <DataGridTextColumn Header="Пришёл" Width="Auto" Binding="{Binding Path=ThatArrival}"/>
+                    <DataGridTextColumn Header="Дрочит" Width="Auto" Binding="{Binding Path=ThatDrochit}"/>
+                    <DataGridTextColumn Header="Комментарий" Width="Auto" Binding="{Binding Path=ThatComment}"/>
+                </DataGrid.Columns>
+            </DataGrid>
 
-        </DataGrid>
-            
-        <DataGrid Name="GridRecords" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left" Height="339" Margin="10,10,0,0" VerticalAlignment="Top" Width="558"
-                  GridLinesVisibility="All" ClipToBounds="True" AutoGenerateColumns="False"  ScrollViewer.CanContentScroll="True"
-                  ScrollViewer.VerticalScrollBarVisibility="Visible"  ScrollViewer.HorizontalScrollBarVisibility="Visible" CanUserAddRows="False">
-            <DataGrid.Columns>
-                <DataGridTextColumn Header="Дата" Width="Auto" Binding="{Binding Path=thatDate}"/>
-                <DataGridTextColumn Header="Время" Width="Auto" Binding="{Binding Path=thatTime}"/>
-                <DataGridTextColumn Header="Пришёл" Width="Auto" Binding="{Binding Path=thatArrival}"/>
-                <DataGridTextColumn Header="Дрочит" Width="Auto" Binding="{Binding Path=thatDrochit}"/>
-                <DataGridTextColumn Header="Комментарий" Width="Auto" Binding="{Binding Path=thatComment}"/>
-            </DataGrid.Columns>
-        </DataGrid>
-
-    </Grid>
+        </Grid>
+    
 </Window>
