--- a/Deji/MainWindow.xaml
+++ b/Deji/MainWindow.xaml
@@ -19,7 +19,8 @@
 
             <StackPanel Orientation="Vertical" Grid.Column="0" HorizontalAlignment="Left" Width="240" Height="60" VerticalAlignment="Top" ClipToBounds="True">
                 <Label Content="Поиск" HorizontalAlignment="Left" VerticalAlignment="Top" Width="240" Height="26" FontWeight="Bold" FontSize="14" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Background="White"/>
-                <TextBox HorizontalAlignment="Left" Height="28" TextWrapping="Wrap" VerticalAlignment="Top" ToolTip="Введите часть ФИО" VerticalContentAlignment="Center" FontStyle="Italic" Width="240"/>
+                <TextBox HorizontalAlignment="Left" Height="28" TextWrapping="Wrap" VerticalAlignment="Top" ToolTip="Введите часть ФИО" VerticalContentAlignment="Center" FontStyle="Italic" Width="240" 
+                         SelectionChanged="qqq" TextChanged="eee"/>
             </StackPanel>
             <StackPanel Grid.Column="1" Margin="0,10,20,10" Orientation="Horizontal">
                 <Button Content="Добавить&#xA;&quot;человека&quot;" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Height="36"/>
