--- a/Deji/MainWindow.xaml
+++ b/Deji/MainWindow.xaml
@@ -9,7 +9,7 @@
 
     <Grid VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
         <TabControl VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Background="#FF857979" Grid.RowSpan="2" BorderBrush="Black">
-            <TabItem Header="Поиск по записям">
+            <TabItem Header="Поиск по записям" MouseLeftButtonDown="qqq">
                 <Grid Margin="10,10,0,0" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" MinWidth="550">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="60" MaxHeight="60" MinHeight="60"/>
@@ -22,7 +22,7 @@
 
                     <StackPanel Orientation="Vertical" Grid.Column="0" HorizontalAlignment="Left" Width="240" Height="60" VerticalAlignment="Top" ClipToBounds="True">
                         <Label Content="Поиск" HorizontalAlignment="Left" VerticalAlignment="Top" Width="240" Height="26" FontWeight="Bold" FontSize="14" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Background="White"/>
-                        <TextBox Name="SearchtextBox" HorizontalAlignment="Left" Height="28" TextWrapping="Wrap" VerticalAlignment="Top" ToolTip="Введите часть ФИО" VerticalContentAlignment="Center" FontStyle="Italic" Width="240" TextChanged="SearchStringChange" Background="White"/>
+                        <TextBox Name="SearchTextBox" HorizontalAlignment="Left" Height="28" TextWrapping="Wrap" VerticalAlignment="Top" ToolTip="Введите часть ФИО" VerticalContentAlignment="Center" FontStyle="Italic" Width="240" TextChanged="SearchStringChange" Background="White"/>
                     </StackPanel>
 
 
