--- a/Deji/MainWindow.xaml
+++ b/Deji/MainWindow.xaml
@@ -8,8 +8,8 @@
         Title="MainWindow" Width="800" Height="450" Background="#FF857979">
 
     <Grid VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
-        <TabControl VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Background="#FF857979" Grid.RowSpan="2" BorderBrush="Black">
-            <TabItem Header="Поиск по записям" MouseLeftButtonDown="qqq">
+        <TabControl VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Background="#FF857979" Grid.RowSpan="2" BorderBrush="Black" SelectionChanged="TabClick">
+            <TabItem Header="Поиск по записям">
                 <Grid Margin="10,10,0,0" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" MinWidth="550">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="60" MaxHeight="60" MinHeight="60"/>
@@ -47,7 +47,7 @@
                             <DataGridTextColumn Header="Дата" Width="Auto" Binding="{Binding Path=ThatDate}"/>
                             <DataGridTextColumn Header="Время" Width="Auto" Binding="{Binding Path=ThatTime}"/>
                             <DataGridTextColumn Header="Пришёл" Width="Auto" Binding="{Binding Path=ThatArrival}"/>
-                            <DataGridTextColumn Header="Дрочит" Width="Auto" Binding="{Binding Path=ThatDrochit}"/>
+                            <DataGridTextColumn Header="Спрашивает" Width="Auto" Binding="{Binding Path=ThatDrochit}"/>
                             <DataGridTextColumn Header="Комментарий" Width="Auto" Binding="{Binding Path=ThatComment}"/>
                         </DataGrid.Columns>
                     </DataGrid>
@@ -74,7 +74,7 @@
                     <StackPanel Grid.Row="1" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Orientation="Horizontal" Margin="0,1,0,0">
                         <StackPanel VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Orientation="Vertical">
                             <Label Content="Звание" HorizontalAlignment="Stretch" Background="White" Height="30"/>
-                            <ComboBox HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Loaded="LoadedRank" Width="100"/>
+                            <ComboBox Name="ElRank" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="100"/>
                         </StackPanel>
                         <StackPanel VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Orientation="Vertical">
                             <Label Content="ФИО" HorizontalAlignment="Stretch" Background="White" Height="30"/>
@@ -82,11 +82,11 @@
                         </StackPanel>
                         <StackPanel VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Orientation="Vertical">
                             <Label Content="Воинская часть" HorizontalAlignment="Stretch" Background="White" Height="30"/>
-                            <ComboBox HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Loaded="LoadedPart" Width="100"/>
+                            <ComboBox Name="ElPart" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="100"/>
                         </StackPanel>
                         <StackPanel VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Orientation="Vertical">
                             <Label Content="Должность" HorizontalAlignment="Stretch" Background="White" Height="30"/>
-                            <ComboBox HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Loaded="LoadedType" Width="100"/>
+                            <ComboBox Name="ElType" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="100"/>
                         </StackPanel>
                         <StackPanel VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Orientation="Vertical">
                             <Label HorizontalAlignment="Stretch" Height="30"/>
@@ -104,7 +104,7 @@
                     <StackPanel Grid.Row="4" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Orientation="Horizontal" Margin="0,1,0,0">
                         <StackPanel VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Orientation="Vertical">
                             <Label Content="Кто" HorizontalAlignment="Stretch" Background="White" Height="30"/>
-                            <ComboBox HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Loaded="LoadedWho" Width="150"/>
+                            <ComboBox Name="ElWho" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="150"/>
                         </StackPanel>
                         <StackPanel VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Orientation="Vertical">
                             <Label Content="Дата" HorizontalAlignment="Stretch" Background="White" Height="30"/>
@@ -119,12 +119,12 @@
                             <CheckBox HorizontalAlignment="Center" Padding="0" Margin="0,4,0,0" />
                         </StackPanel>
                         <StackPanel VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Orientation="Vertical">
-                            <Label Content="Дрочит" HorizontalAlignment="Stretch" Background="White" Height="30"/>
-                            <ComboBox HorizontalAlignment="Stretch" VerticalAlignment="Center" Loaded="LoadedDrochit" Width="100"/>
+                            <Label Content="Спрашивает" HorizontalAlignment="Stretch" Background="White" Height="30"/>
+                            <ComboBox Name="ElDrochit" HorizontalAlignment="Stretch" VerticalAlignment="Center" Width="100"/>
                         </StackPanel>
-                        <StackPanel VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Orientation="Vertical" Margin="-550,60,0,0">
+                        <StackPanel VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Orientation="Vertical" Margin="-554,60,0,0">
                             <Label Content="Комментарий" HorizontalAlignment="Stretch" Background="White" Height="30"/>
-                            <RichTextBox VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Width="550" />
+                            <RichTextBox VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Width="554" />
                         </StackPanel>
                         <StackPanel VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Orientation="Vertical">
                             <Label HorizontalAlignment="Stretch" Height="30"/>
@@ -135,7 +135,7 @@
 
                 </Grid>
             </TabItem>
-            <TabItem Header="Добавление записи"/>
+            <!--<TabItem Header="Добавление записи"/>-->
 
 
         </TabControl>
