--- a/Torrent/MainWindow.xaml
+++ b/Torrent/MainWindow.xaml
@@ -8,15 +8,15 @@
         Title="MainWindow" Height="350" Width="525" Background="#FF857979">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="26"/>
+            <RowDefinition Height="23"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="100"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <Label Grid.Column="0" Grid.Row="0" Content="Connection" HorizontalAlignment="Left" VerticalAlignment="Top" Width="100" Height="26"/>
-        
+        <Label Grid.Column="0" Grid.Row="0" Content="Connection" HorizontalAlignment="Left" VerticalAlignment="Top" Width="100" Height="26" HorizontalContentAlignment="Center"/>
+
         <StackPanel Grid.Row="1" Grid.Column="0" Orientation="Vertical" HorizontalAlignment="Stretch">
             <StackPanel HorizontalAlignment="Stretch" Orientation="Horizontal">
                 <Label Content="IP" HorizontalAlignment="Left" VerticalAlignment="Top" Height="23" Width="34"/>
@@ -29,20 +29,20 @@
             <Button Content="Connect" HorizontalAlignment="Stretch" VerticalAlignment="Top" Width="100" Grid.Row="1" Height="20"/>
         </StackPanel>
 
-        <ToolBar Grid.Column="1" HorizontalAlignment="Left" Height="19" Margin="5,7,0,0" VerticalAlignment="Top" Width="414" Background="#FFBABCBF">
-            <Button VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Margin="0,-2,0,-3">
+        <ToolBar Grid.Column="1" HorizontalAlignment="Stretch" Height="18" VerticalAlignment="Center" Width="414" Background="#FFBABCBF">
+            <Button VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
                 <Image Source="Resources/Up_arrow.png"/>
             </Button>
-            <Button Height="19" Margin="0,-2,0,-3">
+            <Button Height="19">
                 <Image Source="Resources/Left_arrow.png"/>
             </Button>
-            <Button VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Margin="0,-2,0,-3">
+            <Button VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
                 <Image Source="Resources/Right_arrow.png"/>
             </Button>
-            <TextBox Height="14" Margin="0,0,0,-1" Width="243" MinHeight="15"/>
+            <TextBox Height="14" Width="243" MinHeight="15"/>
 
         </ToolBar>
-        <DataGrid Grid.Column="1" Grid.Row="1" Height="291" Margin="5,0,0,0" Width="414"/>
+        <DataGrid Grid.Column="1" Grid.Row="1" Width="414"/>
 
     </Grid>
 </Window>
