--- a/ArmyProjects/Увольнения/MainWindow.xaml
+++ b/ArmyProjects/Увольнения/MainWindow.xaml
@@ -29,31 +29,26 @@
                                 <ColumnDefinition Width="180"/>
                                 <ColumnDefinition Width="1*"/>
                             </Grid.ColumnDefinitions>
-                            
+
                             <StackPanel HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Orientation="Vertical" Grid.Column="0">
                                 <Label Content="" HorizontalAlignment="Stretch" VerticalAlignment="Top" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Height="30"/>
-                                <DataGrid Name="GridNames" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
+                                <DataGrid Name="GridNames" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
+                                          GridLinesVisibility="All" ClipToBounds="True" AutoGenerateColumns="False" CanUserAddRows="False">
+                                    <DataGrid.Columns>
+                                        <DataGridTextColumn Header="№" Width="Auto" Binding="{Binding Path=ThatID}"/>
+                                        <DataGridTextColumn Header="ФИО" Width="Auto" Binding="{Binding Path=ThatName}"/>
+                                    </DataGrid.Columns>
+                                </DataGrid>
                             </StackPanel>
                             <ScrollViewer Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" HorizontalScrollBarVisibility="Visible" VerticalScrollBarVisibility="Disabled">
                                 <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
                                     <StackPanel Name="UvalStack" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Orientation="Horizontal">
-                                        
+
                                     </StackPanel>
                                 </Grid>
                             </ScrollViewer>
                         </Grid>
                     </ScrollViewer>
-
-
-                    <!--<ScrollViewer HorizontalScrollBarVisibility="Visible" VerticalScrollBarVisibility="Visible" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-                        <StackPanel Name="UvalStack" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Orientation="Horizontal">
-                            <ContentControl Content="ContentControl" Template="{DynamicResource UvalTable}"/>
-                            <StackPanel Width="200" VerticalAlignment="Stretch" Orientation="Vertical">
-                                <Label Content="Label" HorizontalAlignment="Stretch" VerticalAlignment="Top" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Height="30"/>
-                                <DataGrid HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
-                            </StackPanel>
-                        </StackPanel>
-                    </ScrollViewer>-->
                 </Grid>
             </TabItem>
 
